--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: info_kit
 description: Provides all basic info about your application. App flavor, Version, Device size, Flavor specific environment variables, and more.
-version: 1.0.0+1
+version: 1.1.0+2
 repository: https://github.com/zvikarp/info_kit
 
 environment:
@@ -10,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_dotenv: ^5.0.2
-  package_info_plus: ^1.4.3+1
+  flutter_dotenv: ^5.1.0
+  package_info_plus: ^4.0.2
   universal_io: ^2.0.4
 
 dev_dependencies:
