--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,22 @@
 name: info_kit
 description: Provides all basic info about your application. App flavor, Version, Device size, Flavor specific environment variables, and more.
-version: 1.2.0+3
+version: 1.3.0+4
 repository: https://github.com/zvikarp/info_kit
 
 environment:
-  sdk: ">=2.17.1 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
-  package_info_plus: ^4.0.2
-  universal_io: ^2.0.4
+  package_info_plus: ^8.0.2
+  universal_io: ^2.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
+  mockito: ^5.4.4
 
 flutter:
